--- a/README
+++ b/README
@@ -6,44 +6,49 @@ Blacklist.js
     **Blacklist.js** is a simple jquery plugin for blacklisting unwanted words.
     
     
-###Implementation###
+###Implementation
 
-####Basic Usage####
+####Basic Usage
     
-    $('p').blacklist();
+```
+  $('p').blacklist();
+``` 
     
-####Changing Symbols####
+####Changing Symbols
 
-    $('p').blacklist({
+```
+  $('p').blacklist({
         symbol: '@@@@'    
-    });
+  });
+``` 
+####Changing Color
 
-####Changing Color####
-
-    $('p').blacklist({
-        color: 'red'
-    });
-
-####Ignore Blacklist word####
-
-    $('p').blacklist({
-        ignore: ['test', 'test1']
-    });
-    
-####Add to the list for blacklist on your page####
-    
-    $('p').blacklist({
-        add_blacklist: ['ABCD', 'XXX']
-    });
-    
-####Overall customization####
-
-    $(document).ready( function() {
-      $('p').blacklist(
-        {
-          color: '#006699',
-          symbol: '$$$$',
-          ignore: ['ass', 'jap'],
-          add_blacklist: ['Senthil']
-        });
-    });
+```
+  $('p').blacklist({
+    color: 'red'
+  });
+``` 
+####Ignore Blacklist word
+```
+  $('p').blacklist({
+      ignore: ['test', 'test1']
+  });
+``` 
+####Add to the list for blacklist on your page
+```     
+  $('p').blacklist({
+      add_blacklist: ['ABCD', 'XXX']
+  });
+``` 
+####Overall customization
+``` 
+  $(document).ready( function() {
+    $('p').blacklist(
+      {
+        color: '#006699',
+        symbol: '$$$$',
+        ignore: ['ass', 'jap'],
+        add_blacklist: ['Senthil']
+      });
+  });
+``` 
